--- a/server/serverless.yml
+++ b/server/serverless.yml
@@ -1,4 +1,4 @@
-service: fb-api-poller
+service: fb-api
 
 plugins:
   - serverless-webpack
@@ -9,11 +9,12 @@ provider:
   environment:
     STAGE: "${opt:stage, self:provider.stage}"
     STORAGE_BUCKET: "${self:custom.storage-bucket-name}"
+    FOOTBALL_DATA_TOKEN: ${ssm:football-data-token}
   runtime: nodejs10.x
   timeout: 10
   region: us-west-2
   deploymentBucket:
-    name: serverless.deploys
+    name: bb.serverless.deploys
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -26,11 +27,11 @@ custom:
     includeModules: true
   serverless-offline:
     dontPrintOutput: true
-    port: 6000
+    port: 3030
 
 functions:
   api:
-    handler: src/index.handler
+    handler: src/api/index.handler
     events:
       - http:
           method: any
@@ -43,7 +44,6 @@ resources:
     ResultsStorage:
       Type: AWS::S3::Bucket
       Properties:
-        AccessControl: PublicRead
         BucketName: ${self:custom.storage-bucket-name}
   Outputs:
     ResultsStorage:
