--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "serverless offline start"
+    "start": "serverless offline start",
+    "deploy": "serverless deploy --stage dev --verbose"
   },
   "author": "",
   "license": "ISC",
